--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-expand-lg p-4">
     <div class="container">
       <div class="d-flex ">
-      <img class="mt-2 me-3 logo"  src="/images/logo" alt="logo" width="64" height="38">
+      <img class="mt-2 me-3 logo"  src="images/logo" alt="logo" width="64" height="38">
         <div class="d-flex flex-column">
           <a class="navbar-brand text-white" href="#">Weather</a>
           <small class="site-desc">tagline goes here</small>
@@ -71,21 +71,21 @@
                 C
               </div>
               <div class="forcast-icon first-img">
-                <img src="/images/icon.webp" alt="">
+                <img src="images/icon.webp" alt="">
               </div>
               
               <div class="custom ">clear</div>
             </div>
             <span class="fir-span">
-              <img src="/images/umprella.png" alt="">
+              <img src="images/umprella.png" alt="">
               20%
             </span>
             <span class="sec-span">
-              <img src="/images/wind.png" alt="">
+              <img src="images/wind.png" alt="">
               18km/h
             </span>
             <span class="thr-span">
-              <img src="/images/compass.png" alt="">
+              <img src="images/compass.png" alt="">
               East
             </span>
           </div>
@@ -98,7 +98,7 @@
           <div class="forcast-content">
             <div class="degree degree2">
               <div class="forcast-icon text-center sec-img">
-                <img src="icon.webp" alt="">
+                <img src="images/icon.webp" alt="">
               </div>
               <div class="max-num2 fs-3 text-center d-flex justify-content-center p-2">
                 7.4
@@ -123,7 +123,7 @@
           <div class="forcast-content">
             <div class="degree">
               <div class="forcast-icon text-center imag2">
-                <img src="icon.webp" alt="">
+                <img src="images/icon.webp" alt="">
               </div>
               <div class="num max-num3  fs-3 text-center d-flex justify-content-center p-2">
                 7.4
