--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg p-4 ">
     <div class="container ">
       <div class="d-flex ">
-      <img class="mt-2 me-3 logo"  src="/images/logo" alt="logo" width="64" height="38">
+      <img class="mt-2 me-3 logo"  src="images/logo" alt="logo" width="64" height="38">
         <div class="d-flex flex-column">
           <a class="navbar-brand text-white" href="#">Company Name  </a>
           <small class="site-desc">tagline goes here</small>
@@ -51,7 +51,7 @@
      <div class="container">
         <div class="home-contact">
             <a href="index.html">Home</a>
-            <img src="/images/arrow-gray.png" class="m-2" alt="">
+            <img src="images/arrow-gray.png" class="m-2" alt="">
             <span>Conatct</span>
         </div>
         <div class="row mt-4 ms-5">
