--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a class="nav-link item" href="#">Photos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link item" href="#" id="contactPage">Contact</a>
+            <a class="nav-link item" href="contact.html" id="contactPage">Contact</a>
           </li>
         </ul>
       </div>
