--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg p-4 ">
     <div class="container ">
       <div class="d-flex ">
-      <img class="mt-2 me-3 logo"  src="images/logo" alt="logo" width="64" height="38">
+      <img class="mt-2 me-3 logo" href="index.html" src="images/logo" alt="logo" width="64" height="38">
         <div class="d-flex flex-column">
           <a class="navbar-brand text-white" href="#">Company Name  </a>
           <small class="site-desc">tagline goes here</small>
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse p-1" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active item" aria-current="page"  id="homePage">Home</a>
+            <a class="nav-link active item" aria-current="page" href="index.html" id="homePage">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link item" href="#">News</a>
