--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
             <a class="nav-link item" href="#">Photos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link item1" href="#">Contact</a>
+            <a class="nav-link item1" href="">Contact</a>
           </li>        
         </ul>
       </div>
